--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>NewsFeed</title>
+<title>Santa Rosa Informa</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,8 +43,8 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="header_bottom">
-          <div class="logo_area"><a href="index.html" class="logo"><img src="images/logo.jpg" alt=""></a></div>
-          <div class="add_banner"><a href="#"><img src="images/addbanner_728x90_V1.jpg" alt=""></a></div>
+          <div class="logo_area"><a href="index.html" class="logo"><img src="images/logo.png" alt=""></a></div>
+          <div class="add_banner"><a href="#"><img src="images/bannerppal.png" alt=""></a></div>
         </div>
       </div>
     </div>
@@ -491,15 +491,15 @@
             <h2>Contact</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             <address>
-            Perfect News,1238 S . 123 St.Suite 25 Town City 3333,USA Phone: 123-326-789 Fax: 123-546-567
+            Vieytes 40, La Tablada Provincia de Buenos Aires, Argentina
             </address>
           </div>
         </div>
       </div>
     </div>
     <div class="footer_bottom">
-      <p class="copyright">Copyright &copy; 2045 <a href="index.html">NewsFeed</a></p>
-      <p class="developer">Developed By Wpfreeware</p>
+      <p class="copyright">Diseñado en Proyecto Escolar &copy; 2020 <a href="index.html">COlegio Parroquial Santa Rosa</a></p>
+      <p class="developer">Desarrollado por Juan B. Rojas</p>
     </div>
   </footer>
 </div>
