--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
 <title>Santa Rosa Informa</title>
+<link href="./images/favicon2.ico" rel="shortcut icon" type="image/ico">
+<link href="./images/favicon2.ico" rel="icon" type="image/ico">
+
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,13 +35,13 @@
         <div class="header_top">
           <div class="header_top_left">
             <ul class="top_nav">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="pages/contact.html">Contact</a></li>
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="#">Quiénes Somos</a></li>
+              <li><a href="pages/contact.html">Contacto</a></li>
             </ul>
           </div>
           <div class="header_top_right">
-            <p>Friday, December 05, 2045</p>
+            <p>****</p>
           </div>
         </div>
       </div>
@@ -56,21 +60,21 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav main_nav">
-          <li class="active"><a href="index.html"><span class="fa fa-home desktop-home"></span><span class="mobile-show">Home</span></a></li>
-          <li><a href="#">Technology</a></li>
-          <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mobile</a>
+          <li class="active"><a href="index.html"><span class="fa fa-home desktop-home"></span><span class="mobile-show">Inicio</span></a></li>
+          <li><a href="#">Nivel Inicial</a></li>
+          <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Nivel Secundario</a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Android</a></li>
-              <li><a href="#">Samsung</a></li>
-              <li><a href="#">Nokia</a></li>
-              <li><a href="#">Walton Mobile</a></li>
-              <li><a href="#">Sympony</a></li>
+              <li><a href="#">Pastoral</a></li>
+              <li><a href="#">Salud</a></li>
+              <li><a href="#">Psicología/Filosofía</a></li>
+              <li><a href="#">Arte</a></li>
+              <li><a href="#">Tecnología</a></li>
             </ul>
           </li>
-          <li><a href="#">Laptops</a></li>
-          <li><a href="#">Tablets</a></li>
-          <li><a href="pages/contact.html">Contact Us</a></li>
-          <li><a href="pages/404.html">404 Page</a></li>
+          <li><a href="#">Calendario de Eventos</a></li>
+          <li><a href="#">Imágenes</a></li>
+          <li><a href="pages/contact.html">Contactanos</a></li>
+          <li><a href="pages/404.html"></a></li>//
         </ul>
       </div>
     </nav>
@@ -78,7 +82,7 @@
   <section id="newsSection">
     <div class="row">
       <div class="col-lg-12 col-md-12">
-        <div class="latest_newsarea"> <span>Latest News</span>
+        <div class="latest_newsarea"> <span>Últimas Noticias</span>
           <ul id="ticker01" class="news_sticker">
             <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">My First News Item</a></li>
             <li><a href="#"><img src="images/news_thumbnail3.jpg" alt="">My Second News Item</a></li>
@@ -110,35 +114,35 @@
     <div class="row">
       <div class="col-lg-8 col-md-8 col-sm-8">
         <div class="slick_slider">
-          <div class="single_iteam"> <a href="pages/single_page.html"> <img src="images/slider_img4.jpg" alt=""></a>
+          <div class="single_iteam"> <a href="pages/single_page.html"> <img src="images/slider1.jpeg" alt=""></a>
             <div class="slider_article">
-              <h2><a class="slider_tittle" href="pages/single_page.html">Fusce eu nulla semper porttitor felis sit amet</a></h2>
-              <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra urna. Morbi dui...</p>
+              <h2><a class="slider_tittle" href="pages/single_page.html">Memoria de la Gestación del cambio de nombre de Nuestra Querida Escuela </a></h2>
+              <p>Historia de los tres niveles de la Institución</p>
             </div>
           </div>
-          <div class="single_iteam"> <a href="pages/single_page.html"> <img src="images/slider_img2.jpg" alt=""></a>
+          <div class="single_iteam"> <a href="pages/single_page.html"> <img src="images/slider2.jpg" alt=""></a>
             <div class="slider_article">
-              <h2><a class="slider_tittle" href="pages/single_page.html">Fusce eu nulla semper porttitor felis sit amet</a></h2>
-              <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra urna. Morbi dui...</p>
+              <h2><a class="slider_tittle" href="pages/single_page.html">Periódico Digital Escolar en Tiempo de Pandemia</a></h2>
+              <p>El periódico para jóvenes impulsa un plan de teletrabajo y una cabecera digital para que los alumnos confinados durante la pandemia de coronavirus editen un periódico colaborativo. La iniciativa se enmarca dentro del proyecto Periódico Escolar Digital.</p>
             </div>
           </div>
-          <div class="single_iteam"> <a href="pages/single_page.html"> <img src="images/slider_img3.jpg" alt=""></a>
+          <div class="single_iteam"> <a href="pages/single_page.html"> <img src="images/slider3.jpeg" alt=""></a>
             <div class="slider_article">
-              <h2><a class="slider_tittle" href="pages/single_page.html">Fusce eu nulla semper porttitor felis sit amet</a></h2>
-              <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra urna. Morbi dui...</p>
+              <h2><a class="slider_tittle" href="pages/single_page.html">1° Aniversario del Colegio Parroquial Santa Rosa </a></h2>
+              <p>Construyendo Historia junto a vos, Gestar el cambio de nombre de la escuela, lleva tiempo, lleva sueños, lleva acompañamiento. Estamos haciendo historia y es difícil poner en palabras lo que condensa este momento tan trascendental.</p>
             </div>
           </div>
-          <div class="single_iteam"> <a href="pages/single_page.html"> <img src="images/slider_img1.jpg" alt=""></a>
+          <div class="single_iteam"> <a href="pages/single_page.html"> <img src="images/slider5.png" alt=""></a>
             <div class="slider_article">
-              <h2><a class="slider_tittle" href="pages/single_page.html">Fusce eu nulla semper porttitor felis sit amet</a></h2>
-              <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra urna. Morbi dui...</p>
+              <h2><a class="slider_tittle" href="pages/single_page.html">Tardes Mágicas Colegio Parroquial Santa Rosa</a></h2>
+              <p>Todos los miércoles a las 15:00 conectate al Facebook de la Parroquia</p>
             </div>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4">
         <div class="latest_post">
-          <h2><span>Latest post</span></h2>
+          <h2><span>Post Recientes</span></h2>
           <div class="latest_post_container">
             <div id="prev-button"><i class="fa fa-chevron-up"></i></div>
             <ul class="latest_postnav">
