--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             </ul>
             <div class="tab-content">
               <div role="tabpanel" class="tab-pane active" id="category">
-                <ul>
+               <!--  <ul>
                   <li class="cat-item"><a href="#">Sports</a></li>
                   <li class="cat-item"><a href="#">Fashion</a></li>
                   <li class="cat-item"><a href="#">Business</a></li>
@@ -408,7 +408,7 @@
                   <li class="cat-item"><a href="#">Games</a></li>
                   <li class="cat-item"><a href="#">Life &amp; Style</a></li>
                   <li class="cat-item"><a href="#">Photography</a></li>
-                </ul>
+                </ul> -->
               </div>
               <div role="tabpanel" class="tab-pane" id="video">
                 <div class="vide_area">
@@ -418,7 +418,7 @@
               <div role="tabpanel" class="tab-pane" id="comments">
                 <ul class="spost_nav">
                   <li>
-                    <div class="media wow fadeInDown"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/post_img1.jpg"> </a>
+                    <!-- <div class="media wow fadeInDown"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/post_img1.jpg"> </a>
                       <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 1</a> </div>
                     </div>
                   </li>
@@ -435,7 +435,7 @@
                   <li>
                     <div class="media wow fadeInDown"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/post_img2.jpg"> </a>
                       <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 4</a> </div>
-                    </div>
+                    </div> -->
                   </li>
                 </ul>
               </div>
@@ -447,20 +447,20 @@
           <div class="single_sidebar wow fadeInDown">
             <h2><span>Category Archive</span></h2>
             <select class="catgArchive">
-              <option>Select Category</option>
+              <!-- <option>Select Category</option>
               <option>Life styles</option>
               <option>Sports</option>
               <option>Technology</option>
-              <option>Treads</option>
+              <option>Treads</option> -->
             </select>
           </div>
           <div class="single_sidebar wow fadeInDown">
             <h2><span>Links</span></h2>
             <ul>
-              <li><a href="#">Blog</a></li>
+              <!-- <li><a href="#">Blog</a></li>
               <li><a href="#">Rss Feed</a></li>
               <li><a href="#">Login</a></li>
-              <li><a href="#">Life &amp; Style</a></li>
+              <li><a href="#">Life &amp; Style</a></li> -->
             </ul>
           </div>
         </aside>
@@ -472,28 +472,28 @@
       <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="footer_widget wow fadeInLeftBig">
-            <h2>Flickr Images</h2>
+            <h2>Flickr Imagenes</h2>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="footer_widget wow fadeInDown">
             <h2>Tag</h2>
             <ul class="tag_nav">
-              <li><a href="#">Games</a></li>
-              <li><a href="#">Sports</a></li>
-              <li><a href="#">Fashion</a></li>
-              <li><a href="#">Business</a></li>
-              <li><a href="#">Life &amp; Style</a></li>
+              <li><a href="#">Pastoral</a></li>
+              <li><a href="#">Arte</a></li>
+              <li><a href="#">Filosofìa/Psicologìa</a></li>
+              <li><a href="#">Salud</a></li>
+              <!-- <li><a href="#">Life &amp; Style</a></li>
               <li><a href="#">Technology</a></li>
               <li><a href="#">Photo</a></li>
-              <li><a href="#">Slider</a></li>
+              <li><a href="#">Slider</a></li> -->
             </ul>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="footer_widget wow fadeInRightBig">
-            <h2>Contact</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <h2>Contacto</h2>
+            <p>Usá el formulario de contacto</p>
             <address>
             Vieytes 40, La Tablada Provincia de Buenos Aires, Argentina
             </address>
