--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
               <ul class="spost_nav">
                 <li>
                   <div class="media wow fadeInDown"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/post_img1.jpg"> </a>
-                    <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 1</a> </div>
+                    <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Esperar contra toda esperanza</a> </div>
                   </div>
                 </li>
                 <li>
