--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
       </div>
     </div>
     <div class="footer_bottom">
-      <p class="copyright">Diseñado en Proyecto Escolar &copy; 2020 <a href="index.html">COlegio Parroquial Santa Rosa</a></p>
+      <p class="copyright">Diseñado en Proyecto Escolar &copy; 2020 <a href="index.html">Colegio Parroquial Santa Rosa</a></p>
       <p class="developer">Desarrollado por Juan B. Rojas</p>
     </div>
   </footer>
