--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav main_nav">
           <li class="active"><a href="index.html"><span class="fa fa-home desktop-home"></span><span class="mobile-show">Inicio</span></a></li>
-          <li><a href="#">Nivel Inicial</a></li>
+          <li><a href="pages/inicial.html">Nivel Inicial</a></li>
           <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Nivel Secundario</a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Pastoral</a></li>
+              <li><a href="pages/pastoral.html">Pastoral</a></li>
               <li><a href="#">Salud</a></li>
               <li><a href="#">Psicología/Filosofía</a></li>
               <li><a href="#">Arte</a></li>
@@ -116,25 +116,25 @@
         <div class="slick_slider">
           <div class="single_iteam"> <a href="pages/single_page.html"> <img src="images/slider1.jpeg" alt=""></a>
             <div class="slider_article">
-              <h2><a class="slider_tittle" href="pages/single_page.html">Memoria de la Gestación del cambio de nombre de Nuestra Querida Escuela </a></h2>
+              <h2><a class="slider_tittle" href="pages/institucional.html">Memoria de la Gestación del cambio de nombre de Nuestra Querida Escuela </a></h2>
               <p>Historia de los tres niveles de la Institución</p>
             </div>
           </div>
           <div class="single_iteam"> <a href="pages/single_page.html"> <img src="images/slider2.jpg" alt=""></a>
             <div class="slider_article">
-              <h2><a class="slider_tittle" href="pages/single_page.html">Periódico Digital Escolar en Tiempo de Pandemia</a></h2>
+              <h2><a class="slider_tittle" href="pages/institucional.html">Periódico Digital Escolar en Tiempo de Pandemia</a></h2>
               <p>El periódico para jóvenes impulsa un plan de teletrabajo y una cabecera digital para que los alumnos confinados durante la pandemia de coronavirus editen un periódico colaborativo. La iniciativa se enmarca dentro del proyecto Periódico Escolar Digital.</p>
             </div>
           </div>
           <div class="single_iteam"> <a href="pages/single_page.html"> <img src="images/slider3.jpeg" alt=""></a>
             <div class="slider_article">
-              <h2><a class="slider_tittle" href="pages/single_page.html">1° Aniversario del Colegio Parroquial Santa Rosa </a></h2>
+              <h2><a class="slider_tittle" href="pages/pastoral.html">1° Aniversario del Colegio Parroquial Santa Rosa </a></h2>
               <p>Construyendo Historia junto a vos, Gestar el cambio de nombre de la escuela, lleva tiempo, lleva sueños, lleva acompañamiento. Estamos haciendo historia y es difícil poner en palabras lo que condensa este momento tan trascendental.</p>
             </div>
           </div>
           <div class="single_iteam"> <a href="pages/single_page.html"> <img src="images/slider5.png" alt=""></a>
             <div class="slider_article">
-              <h2><a class="slider_tittle" href="pages/single_page.html">Tardes Mágicas Colegio Parroquial Santa Rosa</a></h2>
+              <h2><a class="slider_tittle" href="pages/primario.html">Tardes Mágicas Colegio Parroquial Santa Rosa</a></h2>
               <p>Todos los miércoles a las 15:00 conectate al Facebook de la Parroquia</p>
             </div>
           </div>
@@ -147,23 +147,23 @@
             <div id="prev-button"><i class="fa fa-chevron-up"></i></div>
             <ul class="latest_postnav">
               <li>
-                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/post_img1.jpg"> </a>
+                <div class="media"> <a href="pages/pastoral.html" class="media-left"> <img alt="" src="images/post_img1.jpg"> </a>
                   <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Esperar contra toda esperanza</a> </div>
                 </div>
               </li>
               <li>
                 <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/featured_img6.jpeg"> </a>
-                  <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Colegio Parroquial Santa Rosa ¿Por qué el cambio del nombre?</a> </div>
+                  <div class="media-body"> <a href="pages/pastoral.html" class="catg_title"> Colegio Parroquial Santa Rosa ¿Por qué el cambio del nombre?</a> </div>
                 </div>
               </li>
               <li>
                 <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/featured_img2.jpg"> </a>
-                  <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Cómo ha cambiado la vida debido a la pandemia del coronavirus….</a> </div>
+                  <div class="media-body"> <a href="pages/pages_secundario/salud.html" class="catg_title"> Cómo ha cambiado la vida debido a la pandemia del coronavirus….</a> </div>
                 </div>
               </li>
               <li>
                 <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/featured_img3.jpg"> </a>
-                  <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> LA PSICOLOGIA Y LA PANDEMIA: VIAJE AL INTERIOR DE NUESTRAS EMOCIONES</a> </div>
+                  <div class="media-body"> <a href="pages/pages_secundario/psicofilo.html" class="catg_title"> LA PSICOLOGIA Y LA PANDEMIA: VIAJE AL INTERIOR DE NUESTRAS EMOCIONES</a> </div>
                 </div>
               </li>
               <li>
@@ -342,11 +342,11 @@
               <ul class="spost_nav">
                 <li>
                   <div class="media wow fadeInDown"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/post_img1.jpg"> </a>
-                    <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 1</a> </div>
+                    <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Esperar contra toda esperanza</a> </div>
                   </div>
                 </li>
                 <li>
-                  <div class="media wow fadeInDown"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/post_img2.jpg"> </a>
+                  <!-- <div class="media wow fadeInDown"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/post_img2.jpg"> </a>
                     <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 2</a> </div>
                   </div>
                 </li>
@@ -358,7 +358,7 @@
                 <li>
                   <div class="media wow fadeInDown"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/post_img2.jpg"> </a>
                     <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 4</a> </div>
-                  </div>
+                  </div> -->
                 </li>
               </ul>
             </div>
@@ -400,7 +400,7 @@
             </ul>
             <div class="tab-content">
               <div role="tabpanel" class="tab-pane active" id="category">
-                <ul>
+               <!--  <ul>
                   <li class="cat-item"><a href="#">Sports</a></li>
                   <li class="cat-item"><a href="#">Fashion</a></li>
                   <li class="cat-item"><a href="#">Business</a></li>
@@ -408,7 +408,7 @@
                   <li class="cat-item"><a href="#">Games</a></li>
                   <li class="cat-item"><a href="#">Life &amp; Style</a></li>
                   <li class="cat-item"><a href="#">Photography</a></li>
-                </ul>
+                </ul> -->
               </div>
               <div role="tabpanel" class="tab-pane" id="video">
                 <div class="vide_area">
@@ -418,7 +418,7 @@
               <div role="tabpanel" class="tab-pane" id="comments">
                 <ul class="spost_nav">
                   <li>
-                    <div class="media wow fadeInDown"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/post_img1.jpg"> </a>
+                    <!-- <div class="media wow fadeInDown"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/post_img1.jpg"> </a>
                       <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 1</a> </div>
                     </div>
                   </li>
@@ -435,32 +435,32 @@
                   <li>
                     <div class="media wow fadeInDown"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/post_img2.jpg"> </a>
                       <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 4</a> </div>
-                    </div>
+                    </div> -->
                   </li>
                 </ul>
               </div>
             </div>
           </div>
           <div class="single_sidebar wow fadeInDown">
-            <h2><span>Sponsor</span></h2>
+            <h2><span>Patrocinadores</span></h2>
             <a class="sideAdd" href="#"><img src="images/add_img.jpg" alt=""></a> </div>
           <div class="single_sidebar wow fadeInDown">
-            <h2><span>Category Archive</span></h2>
+            <h2><span>Categorias y Archivos</span></h2>
             <select class="catgArchive">
-              <option>Select Category</option>
+              <!-- <option>Select Category</option>
               <option>Life styles</option>
               <option>Sports</option>
               <option>Technology</option>
-              <option>Treads</option>
+              <option>Treads</option> -->
             </select>
           </div>
           <div class="single_sidebar wow fadeInDown">
-            <h2><span>Links</span></h2>
+            <h2><span>Enlaces de Interés</span></h2>
             <ul>
-              <li><a href="#">Blog</a></li>
+              <!-- <li><a href="#">Blog</a></li>
               <li><a href="#">Rss Feed</a></li>
               <li><a href="#">Login</a></li>
-              <li><a href="#">Life &amp; Style</a></li>
+              <li><a href="#">Life &amp; Style</a></li> -->
             </ul>
           </div>
         </aside>
@@ -472,28 +472,28 @@
       <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="footer_widget wow fadeInLeftBig">
-            <h2>Flickr Images</h2>
+            <h2>Flickr Imagenes</h2>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="footer_widget wow fadeInDown">
             <h2>Tag</h2>
             <ul class="tag_nav">
-              <li><a href="#">Games</a></li>
-              <li><a href="#">Sports</a></li>
-              <li><a href="#">Fashion</a></li>
-              <li><a href="#">Business</a></li>
-              <li><a href="#">Life &amp; Style</a></li>
+              <li><a href="#">Pastoral</a></li>
+              <li><a href="#">Arte</a></li>
+              <li><a href="#">Filosofìa/Psicologìa</a></li>
+              <li><a href="#">Salud</a></li>
+              <!-- <li><a href="#">Life &amp; Style</a></li>
               <li><a href="#">Technology</a></li>
               <li><a href="#">Photo</a></li>
-              <li><a href="#">Slider</a></li>
+              <li><a href="#">Slider</a></li> -->
             </ul>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="footer_widget wow fadeInRightBig">
-            <h2>Contact</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <h2>Contacto</h2>
+            <p>Usá el formulario de contacto</p>
             <address>
             Vieytes 40, La Tablada Provincia de Buenos Aires, Argentina
             </address>
@@ -502,7 +502,7 @@
       </div>
     </div>
     <div class="footer_bottom">
-      <p class="copyright">Diseñado en Proyecto Escolar &copy; 2020 <a href="index.html">COlegio Parroquial Santa Rosa</a></p>
+      <p class="copyright">Diseñado en Proyecto Escolar &copy; 2020 <a href="index.html">Colegio Parroquial Santa Rosa</a></p>
       <p class="developer">Desarrollado por Juan B. Rojas</p>
     </div>
   </footer>
