--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	
-<title>Santa Rosa Informa</title>
-<link href="./images/favicon2.ico" rel="shortcut icon" type="image/ico">
-<link href="./images/favicon2.ico" rel="icon" type="image/ico">
+<title>INICIAL</title>
+<link href="../images/favicon2.ico" rel="shortcut icon" type="image/ico">
+<link href="../images/favicon2.ico" rel="icon" type="image/ico">
+
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -46,8 +47,8 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="header_bottom">
-          <div class="logo_area"><a href="index.html" class="logo"><img src="images/logo.png" alt=""></a></div>
-          <div class="add_banner"><a href="#"><img src="images/bannerppal.png" alt=""></a></div>
+          <div class="logo_area"><a href="index.html" class="logo"><img src="../images/logo.png" alt=""></a></div>
+          <div class="add_banner"><a href="#"><img src="../images/bannerppal.png" alt=""></a></div>
         </div>
       </div>
     </div>
@@ -119,12 +120,28 @@
               <li><a href="#">Technology</a></li>
               <li class="active">Mobile</li>
             </ol>
-            <h1>Morbi dapibus, enim quis luctus interdum</h1>
-            <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Wpfreeware</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>Technology</a> </div>
+            <h1>NIVEL INICIAL</h1>
+            <!-- <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Wpfreeware</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>Technology</a> </div>
             <div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt="">
-              <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra urna. Morbi dui lectus, pharetra nec elementum eget, vulputate ut nisi. Aliquam accumsan, nulla sed feugiat vehicula, lacus justo semper libero, quis porttitor turpis odio sit amet ligula. Duis dapibus fermentum orci, nec malesuada libero vehicula ut. Integer sodales, urna eget interdum eleifend, nulla nibh laoreet nisl, quis dignissim mauris dolor eget mi. Donec at mauris enim. Duis nisi tellus, adipiscing a convallis quis, tristique vitae risus. Nullam molestie gravida lobortis. Proin ut nibh quis felis auctor ornare. Cras ultricies, nibh at mollis faucibus, justo eros porttitor mi, quis auctor lectus arcu sit amet nunc. Vivamus gravida vehicula arcu, vitae vulputate augue lacinia faucibus.</p>
-              <blockquote> Donec volutpat nibh sit amet libero ornare non laoreet arcu luctus. Donec id arcu quis mauris euismod placerat sit amet ut metus. Sed imperdiet fringilla sem eget euismod. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque adipiscing, neque ut pulvinar tincidunt, est sem euismod odio, eu ullamcorper turpis nisl sit amet velit. Nullam vitae nibh odio, non scelerisque nibh. Vestibulum ut est augue, in varius purus. </blockquote>
-              <ul>
+              <h1>Colegio Parroquial Santa Rosa ¿Por qué el cambio del nombre?</h1>
+			  <p>Querida comunidad educativa, </p>
+			  <p>Pertenecer es generar vínculos indisolubles, es una síntesis que puede definirse como Evangelio y Vida. Es así que nacen valores y actitudes que tienen una impronta propia de quienes iluminan lo cotidiano a la luz de la Palabra. </p>
+              <p>Gestar el cambio de nombre de la escuela, lleva tiempo, lleva sueños, lleva acompañamiento. Estamos haciendo historia y es difícil poner en palabras lo que condensa este momento tan trascendental.</p> 56
+              <p>Cuando Dios da un nombre nuevo quiere mostrar una nueva misión en relación con su plan de salvación y para manifestar su alianza, su bendición, el cumplimiento de su promesa.</p>
+			  <p>Abraham (padre enaltecido) pasa a llamarse Abraham (padre de multitudes). Sarai (princesa), a Sara (Madre de naciones). Jacob (el que suplanta), a Israel (fuerte con Dios). Simón (Dios ha escuchado), pasa a llamarse Pedro (piedra). </p>
+<p><blockquote> El nombre nuevo revela una nueva identidad: una nueva criatura 2Co 5,17</blockquote></p>
+<p>Al pasar de llamarse "Cervantes" (que manifiesta la excelencia de la cultura) a "Santa Rosa de Lima" (modelo de santidad) </p>
+<p>Dios nos invita a mirar la identidad más profunda de esta comunidad educativa que sin descuidar la formación cultural es misión en un lugar concreto, está llamada a transfigurar el barrio según el plan de Dios y buscar la santidad en lo cotidiano y sencillo de cada día como Rosa lo hizo. </p>
+<p>Santa Rosa tuvo siempre presente a Jesús en su vida. Su modo de obrar lo demostraba. 
+Queremos que este nuevo nombre no sea un cambio radical, sino una fuente de inspiración para lo que viene, pero siendo agradecidos con la gran historia y trayectoria de esta querida casa de estudios. </p>
+<p> Queremos que sea: una escuela que educa para la vida y una parroquia que evangeliza, donde Jesús sea el centro, mirando como el miro, hablando como el habló y actuando como él actuó. </p>
+<p>Hoy, queremos seguir soñando y celebramos todas las oportunidades que, tanto a ustedes, como a nosotros, nos permiten no perder las esperanzas en un mundo mejor y con mayores posibilidades. Donde hay sueños, donde hay alegría, ahí siempre está Jesús, porque Jesús es alegría y quiere ayudarnos a que esta permanezca todos los días. </p>
+<p>Todos juntos hagamos realidad el lema de nuestra Escuela: Colegio Parroquial Santa Rosa construyendo historia junto a VOS</p>
+<p>Quiero agradecer a DIOS a nuestro Obispo, Eduardo García, por confiar en este proyecto y acompañarme siempre con su cercanía y bendición. También agradezco a nuestra Inspectora Jefe, Mariana Suarez y al Equipo de Conducción que me acompaña en la tarea cotidiana. A todos los docentes, auxiliares y familias, por estar siempre presente adhiriendo al proyecto Institucional. </p>
+<p>Quiero agradecer la presencia de todos ustedes hoy, porque al ponerle fecha a un sueño, se convierte en meta. Una meta dividida en pasos se convierte en un plan. Un plan puesto en las manos de DIOS y acompañado de acciones con quienes están al lado nuestro, se vuelve realidad. Los llevo en mi corazón. Dios los bendiga. </p>
+<p><center>Pbro.. Walter Fabián Posca.</center></p>
+<p><center>Representante Legal. </center></p>
+<!--<ul>
                 <li>Nullam vitae nibh odio, non scelerisque nibh</li>
                 <li>Nullam vitae nibh odio, non scelerisque nibh</li>
                 <li>Nullam vitae nibh odio, non scelerisque nibh</li>
@@ -145,8 +162,43 @@
               <button class="btn btn-orange">Orange Button</button>
               <button class="btn btn-blue">Blue Button</button>
               <button class="btn btn-lime">Lime Button</button>
-              <button class="btn btn-theme">Theme Button</button>
+              <button class="btn btn-theme">Theme Button</button> -->
             </div>
+			<div class="single_post_content">
+            <h2><span>Galeria de Fotos</span></h2>
+            <ul class="photograph_nav  wow fadeInDown">
+              <li>
+                <div class="photo_grid">
+                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="../images/pastoral/pimg1.jpeg" title="Photography Ttile 1"> <img src="../images/inicial/photograph_img1.jpeg" alt=""/></a> </figure>
+                </div>
+              </li>
+              <li>
+                <div class="photo_grid">
+                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="../images/pastoral/pimg10.jpeg" title="Photography Ttile 2"> <img src="../images/inicial/photograph_img2.jpeg" alt=""/> </a> </figure>
+                </div>
+              </li>
+              <li>
+                <div class="photo_grid">
+                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="../images/pastoral/pimg3.jpeg" title="Photography Ttile 3"> <img src="../images/inicial/photograph_img3.jpeg" alt=""/> </a> </figure>
+                </div>
+              </li>
+              <li>
+                <div class="photo_grid">
+                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="../images/pastoral/pimg4.jpeg" title="Photography Ttile 4"> <img src="../images/inicial/photograph_img4.jpeg" alt=""/> </a> </figure>
+                </div>
+              </li>
+              <li>
+                <div class="photo_grid">
+                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="../images/pastoral/pimg5.jpeg" title="Photography Ttile 5"> <img src="../images/inicial/photograph_img5.jpeg" alt=""/> </a> </figure>
+                </div>
+              </li>
+              <li>
+                <div class="photo_grid">
+                  <figure class="effect-layla"> <a class="fancybox-buttons" data-fancybox-group="button" href="../images/pastoral/pimg6.jpeg" title="Photography Ttile 6"> <img src="../images/inicial/photograph_img6.jpeg" alt=""/> </a> </figure>
+                </div>
+              </li>
+            </ul>
+          </div>
             <div class="social_link">
               <ul class="sociallink_nav">
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -162,22 +214,22 @@
             <div id="prev-button"><i class="fa fa-chevron-up"></i></div>
             <ul class="latest_postnav">
               <li>
-                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/post_img1.jpg"> </a>
+                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="../images/post_img1.jpg"> </a>
                   <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Esperar contra toda esperanza</a> </div>
                 </div>
               </li>
               <li>
-                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/featured_img6.jpeg"> </a>
+                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="../images/featured_img6.jpeg"> </a>
                   <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Colegio Parroquial Santa Rosa ¿Por qué el cambio del nombre?</a> </div>
                 </div>
               </li>
               <li>
-                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/featured_img2.jpg"> </a>
+                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="../images/featured_img2.jpg"> </a>
                   <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Cómo ha cambiado la vida debido a la pandemia del coronavirus….</a> </div>
                 </div>
               </li>
               <li>
-                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/featured_img3.jpg"> </a>
+                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="../images/featured_img3.jpg"> </a>
                   <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> LA PSICOLOGIA Y LA PANDEMIA: VIAJE AL INTERIOR DE NUESTRAS EMOCIONES</a> </div>
                 </div>
               </li>
@@ -206,8 +258,8 @@
             <h2><span>Mas leídas</span></h2>
             <ul class="spost_nav">
               <li>
-                <div class="media wow fadeInDown"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="images/post_img6.jpg"> </a>
-                  <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Colegio Parroquial Santa Rosa ¿Por qué el cambio del nombre?</a> </div>
+                <div class="media wow fadeInDown"> <a href="pages/pastoral.html" class="media-left"> <img alt="" src="../images/slider3.jpeg"> </a>
+                  <div class="media-body"> <a href="pages/pastoral.html" class="catg_title"> Colegio Parroquial Santa Rosa ¿Por qué el cambio del nombre?</a> </div>
                 </div>
               </li>
               <li>
